crates/willikins-providers-github/tests/it/snapshots/it__catalog_parity__github_actions_secret_ensure_spec.snap
---
source: crates/willikins-providers-github/tests/it/catalog_parity.rs
assertion_line: 77
expression: secret
---
{
  "class": "reversible",
  "description": "Ensure a GitHub Actions repository secret exists. Never reads or stores its value.",
  "inputs": {
    "name": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "ActionsSecretName"
      }
    },
    "repo": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "GitHubRepo"
      }
    },
    "token": {
      "required": false,
      "ty": {
        "kind": "exact",
        "type": "GitHubToken"
      }
    },
    "value": {
      "required": true,
      "ty": {
        "kind": "any_secret"
      }
    }
  },
  "key": [
    "repo",
    "name"
  ],
  "name": "github.actions_secret.ensure",
  "outputs": {},
  "pure": false
}
