crates/willikins-providers-github/tests/it/snapshots/it__catalog_parity__github_repo_get_spec.snap
---
source: crates/willikins-providers-github/tests/it/catalog_parity.rs
assertion_line: 78
expression: repo_get
---
{
  "class": "reversible",
  "description": "Reference an existing GitHub repository, checked against the live API.",
  "inputs": {
    "repo": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "GitHubRepo"
      }
    },
    "token": {
      "required": false,
      "ty": {
        "kind": "exact",
        "type": "GitHubToken"
      }
    }
  },
  "key": [],
  "name": "github.repo.get",
  "outputs": {
    "repo": "GitHubRepo"
  },
  "pure": true
}
